# chess_lib

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bitboard.rs  chessmove.rs  color.rs  diagnostics.rs  engine.rs  evaluate.rs  filerank.rs  init.rs  lib.rs  magic.rs  main.rs  movegen.rs  moveorder.rs  piece.rs  position.rs  prng.rs  search.rs  square.rs  tt.rs  zobrist.rs
