[package]
name = "chess-lib"
version = "0.2.0"
edition = "2021"
description = "A chess engine library"
license = "GPL-3.0"
repository = "https://github.com/typicalsamprice/chess_lib"
readme = "README.md"
keywords = ["chess"]
categories = ["chess"]

[profile.production]
inherits = "release"
lto = true
panic = 'abort'
codegen-units = 8
strip = true

[features]
default = []

pext = []

[dependencies]
bitintr = "0.3.0"
